updated validations and search

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,7 +61,7 @@ en:
         firstName:        "first name"
         lastName:         "last name"
         email:            "email"
-        password_digest:  "password confirmation"
+        password_digest:  "password"
         password:         "password"
         companyName:      "company name"
         favFood:          "favorite food"
